--- a/www/template/common/navbar.html
+++ b/www/template/common/navbar.html
@@ -14,7 +14,7 @@
 			</a>
 		</div>
 		<div class="top_right noc_a">
-			<div class="menu_group  noc_d">
+			<div class="menu_group  noc_d  hidden">
 				<?php if ($GLOBALS['is_root'] == 1 || $_SESSION['super'] == 'super') {?>
 						<a href="javascript:core.setting('system');"><img src="<?php echo STATIC_PATH;?>images/settings.png"></a>
 					<?php }
@@ -23,7 +23,7 @@
 					<?php }?>
 			</div>
 			<?php if ($GLOBALS['is_root'] == 1) {?>
-				<div class="menu_group noc_d">	
+				<div class="menu_group noc_d hidden">	
 					<a href="javascript:core.saveAll();"><img src="<?php echo STATIC_PATH;?>images/save.png"></a>
 				</div>
 			<?php }?>
