--- a/www/static/style/login.css
+++ b/www/static/style/login.css
@@ -21,7 +21,7 @@ a:hover{color:#fff;}
 	width:100%;height: 100%;
   	right: 0px;top: 0px; bottom: 0px;left: 0px;
 }
-.title{width:100%;height:120px;display: flex;align-items: center;padding-top:0px;border-top-left-radius: 3px;border-top-right-radius: 3px;}
+.title{width:100%;height:120px;display: flex;flex-direction: column;align-items: center;justify-content: flex-end;padding-top:0px;border-top-left-radius: 3px;border-top-right-radius: 3px;}
 .title .logo{    text-align: center;display: flex;justify-content: center;width: 100%;}
 .title .logo img{max-width: 60%;max-height: 120px;}
 .title .logo i{color:#aaddff;font-weight: 400;margin-right: 10px;}
