--- a/www/static/style/login.css
+++ b/www/static/style/login.css
@@ -23,9 +23,9 @@ a:hover{color:#fff;}
 }
 .title{width:100%;height:120px;display: flex;flex-direction: column;align-items: center;justify-content: flex-end;padding-top:0px;border-top-left-radius: 3px;border-top-right-radius: 3px;}
 .title .logo{    text-align: center;display: flex;justify-content: center;width: 100%;}
-.title .logo img{max-width: 60%;max-height: 120px;}
+.title .logo img{max-width: 50%;max-height: 120px;}
 .title .logo i{color:#aaddff;font-weight: 400;margin-right: 10px;}
-.title .info{text-align: right;font-size: 14px;color:#2da2f0;padding-right: 14px;padding-top:0px;}	
+.title .info{text-align: right;font-size: 14px;color:#2da2f0;padding-right: 14px;padding-top:0px;width: 100%;}	
 
 .w80{width: 80px;}
 .inputs{padding:20px 30px 0px 45px;}
