--- a/www/static/style/skin/metro/secros_app_explorer.css
+++ b/www/static/style/skin/metro/secros_app_explorer.css
@@ -587,7 +587,7 @@ html { overflow-x: hidden; overflow-y: hidden;}
 .frame-header .header-content .header-right input { display: block; float: left; border: 1px solid #ddd; height: 25px; height: 27px \9; padding-left: 10px; padding-right: 10px; text-shadow: 1px 1px 3px #cce; color: #888; background: #f8f8f8 url("../../../images/bg.gif") 0px -2px repeat-x; box-shadow: #e6e6e6 0px 0px 20px inset; outline: none; width: 120px; -webkit-transition: all 0.218s; -moz-transition: all 0.218s; -o-transition: all 0.218s; -ms-transition: all 0.218s; transition: all 0.218s;}
 .frame-header .header-content .header-right input:focus { width: 160px; box-shadow: #ccc 0px 0px 20px inset;}
 .frame-main { position: absolute; left: 0; right: 0; top: 140px; bottom: 30px;}
-.frame-main .frame-left { position: absolute; left: 0; top: 0; bottom: 0; width: 199px; border-right: 1px solid #ddd; background: #f3f3f3; background-attachment: fixed; overflow: auto;}
+.frame-main .frame-left { position: absolute; left: 0; top: 0; bottom: 0; width: 199px; border-right: 1px solid #ddd; background: #f3f3f3; background-attachment: fixed;}
 .frame-main .frame-left #folderList { position: absolute; width: 100%; top: 0px; bottom: 92px;overflow: auto;}
 .frame-main .bottom_box { position: fixed; bottom: 30px; height: 91px; width: 199px; opacity: 0.9; filter: alpha(opacity=90); overflow: hidden; border-right: 1px solid #ddd; border-top: 1px solid #e6e6e6; background: #f6f6f6;}
 .frame-main .bottom_box .box_content { margin: 0 auto; width: 190px; padding-left: 50px;}
